--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,8 +36,9 @@ jobs:
           host: ${{ secrets.HOST_IP }}
           username: ${{ secrets.HOST_USERNAME }}
           script: |
-            su secrets.HOST_NAME_2
+            su secrets.HOST_NAME_TWO
             secrets.PASSWORD
+            cd ~
             pm2 delete all
             cd /root/surviecraft
             git pull
