--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,9 +36,8 @@ jobs:
           host: ${{ secrets.HOST_IP }}
           username: ${{ secrets.HOST_USERNAME }}
           script: |
-            sudo su root
             pm2 delete all
-            cd /root/surviecraft
+            cd /alpaca/surviecraft
             git pull
             npm install
             pm2 start dist/index.js
