--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,3 +1,4 @@
+# Github Actions Script
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
@@ -36,8 +37,8 @@ jobs:
           host: ${{ secrets.HOST_IP }}
           username: ${{ secrets.HOST_USERNAME }}
           script: |
-            sudo pm2 delete all
-            sudo cd /alpaca/surviecraft
-            sudo git pull
-            sudo npm install
-            sudo pm2 start dist/index.js
+            pm2 delete all
+            cd /root/surviecraft
+            git pull
+            npm install
+            pm2 start dist/index.js
